--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -42,7 +42,8 @@
     </nav>
   </div>
 </section>
-
+<h1>Model Trained and predicted is <b>{{model}}</b></h1>
+<h3>Accuracy of the model is : {{accur}}</h3>
 
 <table>
   <tr>
