--- a/app/templates/ann.html
+++ b/app/templates/ann.html
@@ -27,7 +27,7 @@
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
       <ul class="nav-list">
         <li>
-          <a href="#!">Home</a>
+          <a href="{{url_for('index')}}">Home</a>
         </li>
         <li>
           <a href="#!">About Us</a>
@@ -43,9 +43,8 @@
     </nav>
   </div>
 </section>
-<h1>Model Trained and predicted is <b>Artificial Neural Network</b></h1>
-<h3>Accuracy of the model is : 93.78531073446328</h3>
-
+<h1 style="color:white">Model Trained and predicted is <b>Artifical Neural Network</b></h1>
+<h3 style="color:white">Accuracy of the model is : 94.54673</h3>
 <table>
   <tr>
     <th>Gender</th>
