--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -26,7 +26,7 @@
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
       <ul class="nav-list">
         <li>
-          <a href="#!">Home</a>
+          <a href="{{url_for('index')}}">Home</a>
         </li>
         <li>
           <a href="#!">About Us</a>
@@ -48,21 +48,21 @@
     <b><u>Support Vector Machine</u></b>
   </div>
   <img  class="img1" src="/static/download.png">
-  <a href="{{url_for('svm')}}" style="color: white"><h3>Check</h3></a>
+  <a href="{{url_for('svm')}}" style="color: white" class="check"><h3>Check</h3></a>
 </div>
 <div class="category">
   <div class="category1">
     <b><u>Artifical Neural Network</u></b>
   </div>
   <img  class="img1" src="/static/download (1).png">
-  <a href="{{url_for('ann')}}" style="color: white"><h3>Check</h3></a>
+  <a href="{{url_for('ann')}}" style="color: white" class="check"><h3>Check</h3></a>
 </div>
 <div class="category">
   <div class="category1">
     <b>&nbsp;&nbsp;&nbsp;<u>Bayesian Classifier</u></b>
   </div>
   <img  class="img1" src="/static/download (2).png">
-  <a href="{{url_for('bayesian')}}" style="color: white"><h3>Check</h3></a>
+  <a href="{{url_for('bayesian')}}" style="color: white" class="check"><h3>Check</h3></a>
 </div>
 
 </body>
