--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
         <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
         <ul class="nav-list">
           <li>
-            <a href="#!">Home</a>
+            <a href="{{url_for('index')}}">Home</a>
           </li>
           <li>
             <a href="#!">About Us</a>
